--- a/index.html
+++ b/index.html
@@ -3,29 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebAR Earth</title>
+    <title>Realistic Solar System</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/jeromeetienne/AR.js/aframe/build/aframe-ar.min.js"></script>
-    <style>
-        body { margin: 0; overflow: hidden; }
-        #info { position: absolute; top: 10px; left: 10px; color: white; font-size: 18px; z-index: 10; }
-    </style>
 </head>
 <body>
-    <div id="info">🔭 Point your camera at the marker to see Earth in AR!</div>
-    
-    <a-scene embedded arjs>
-        <!-- AR Marker (Loads Earth when viewed through the camera) -->
-        <a-marker preset="hiro">
-            <a-entity 
-                position="0 0 0"
-                scale="1 1 1"
-                gltf-model="https://cdn.jsdelivr.net/gh/KhronosGroup/glTF-Sample-Models/2.0/EarthGlTF/glTF/Earth.gltf"
-                rotation="0 180 0">
-            </a-entity>
-        </a-marker>
+    <a-scene background="color: black">
         
-        <a-entity camera></a-entity>
+        <!-- Stars Background -->
+        <a-sky src="https://upload.wikimedia.org/wikipedia/commons/6/6a/NASA_starfield.jpg"></a-sky>
+
+        <!-- Sun with Emissive Glow and Light Reflection -->
+        <a-light type="point" intensity="50" position="0 0 0" distance="1000" color="#ffffaa"></a-light>
+        <a-sphere position="0 0 0" radius="4" 
+            src="https://upload.wikimedia.org/wikipedia/commons/7/76/Solarsystemscope_texture_2k_sun.jpg" 
+            emissive="#ffaa00" emissiveIntensity="3">
+            <a-animation attribute="rotation" to="0 360 0" dur="30000" repeat="indefinite"></a-animation>
+        </a-sphere>
+
+        <!-- Planets with Realistic Textures and Light Reflection -->
+        <a-entity position="5 0 0">
+            <a-sphere radius="0.4" src="https://upload.wikimedia.org/wikipedia/commons/2/2d/Mercury_texture.jpg" material="metalness: 0.9; roughness: 0.1;"></a-sphere>
+        </a-entity>
+
+        <a-entity position="9 0 0">
+            <a-sphere radius="0.7" src="https://upload.wikimedia.org/wikipedia/commons/8/85/Venus_globe.jpg" material="metalness: 0.7; roughness: 0.2;"></a-sphere>
+        </a-entity>
+
+        <a-entity position="14 0 0">
+            <a-sphere radius="0.9" src="https://upload.wikimedia.org/wikipedia/commons/7/7d/Earthmap1000x500.jpg" material="metalness: 0.5; roughness: 0.4;"></a-sphere>
+        </a-entity>
+
+        <a-entity position="14.8 0 0">
+            <a-sphere radius="0.2" src="https://upload.wikimedia.org/wikipedia/commons/3/3b/The_Moon.jpg"></a-sphere>
+        </a-entity>
+
+        <a-entity position="20 0 0">
+            <a-sphere radius="0.6" src="https://upload.wikimedia.org/wikipedia/commons/5/56/Mars_Viking_color.jpg"></a-sphere>
+        </a-entity>
+
+        <a-entity position="30 0 0">
+            <a-sphere radius="2" src="https://upload.wikimedia.org/wikipedia/commons/c/c1/Jupiter_New_Horizons.jpg"></a-sphere>
+        </a-entity>
+
+        <a-entity position="40 0 0">
+            <a-sphere radius="1.8" src="https://upload.wikimedia.org/wikipedia/commons/4/43/Saturnx.jpg"></a-sphere>
+            <a-ring radius-inner="2.2" radius-outer="3" position="0 0 0" rotation="90 0 0" src="https://upload.wikimedia.org/wikipedia/commons/3/3c/Saturn_rings.png"></a-ring>
+        </a-entity>
+
+        <a-entity position="50 0 0">
+            <a-sphere radius="1.5" src="https://upload.wikimedia.org/wikipedia/commons/3/3d/Uranus2.jpg"></a-sphere>
+        </a-entity>
+
+        <a-entity position="60 0 0">
+            <a-sphere radius="1.3" src="https://upload.wikimedia.org/wikipedia/commons/0/06/Neptune.jpg"></a-sphere>
+        </a-entity>
+
+        <!-- Dwarf Planets and Celestial Bodies -->
+        <a-entity position="70 0 0">
+            <a-sphere radius="0.5" src="https://upload.wikimedia.org/wikipedia/commons/2/2a/Pluto-01_Stern_03_Pluto_Color_TXT.jpg"></a-sphere>
+        </a-entity>
+
+        <!-- Asteroids Belt -->
+        <a-entity position="35 5 -10">
+            <a-sphere radius="0.2" color="gray"></a-sphere>
+        </a-entity>
+
+        <a-entity position="36 -3 8">
+            <a-sphere radius="0.15" color="darkgray"></a-sphere>
+        </a-entity>
+
+        <!-- Comet -->
+        <a-entity position="-50 20 -30">
+            <a-sphere radius="0.3" color="white"></a-sphere>
+            <a-cylinder position="0 -1 0" height="5" radius="0.1" color="blue" opacity="0.7"></a-cylinder>
+        </a-entity>
+
+        <!-- Orbit Paths -->
+        <a-ring position="0 0 0" radius-inner="5" radius-outer="5.1" color="gray"></a-ring>
+        <a-ring position="0 0 0" radius-inner="9" radius-outer="9.1" color="gray"></a-ring>
+        <a-ring position="0 0 0" radius-inner="14" radius-outer="14.1" color="gray"></a-ring>
+        <a-ring position="0 0 0" radius-inner="20" radius-outer="20.1" color="gray"></a-ring>
+
+        <!-- Camera for Navigation -->
+        <a-entity position="0 5 100">
+            <a-camera wasd-controls look-controls></a-camera>
+        </a-entity>
     </a-scene>
 </body>
 </html>
+
